Full Working Nav + Start on Intro Section

--- a/style.css
+++ b/style.css
@@ -2,76 +2,125 @@
     margin: 0;
     padding: 0;
     box-sizing: border-box;
-    break-after: avoid;
-    break-before: avoid;
+    overflow-x: hidden;
 }
 
-header {
-    background-color: #333;
-    width: 100%;
+#header {
     display: flex;
+    justify-content: space-around;
     align-items: center;
+    background-color: aquamarine;
+    min-height: 7vh;
+    position: fixed;
+    width: 100%;
+}
+
+#header .logo h1 {
+    font-family: 'Poppins', sans-serif;
+    text-transform: uppercase;
+    letter-spacing: 4px;
+    font-size: 26px;
+    color: rgb(24, 24, 24);
+}
+
+.nav-list {
+    list-style: none;
+    display: flex;
     justify-content: space-between;
+    width: 20%
 }
 
-.left-title {
-    width: fit-content;
-    font-size: 30px;
-    margin: .5rem 0 .5rem .5rem;
-}
-
-.navbar {
-    margin-right: .5rem;
-}
-
-.navbar a {
-    color: #f2f2f2;
+.nav-list li a {
     text-decoration: none;
-    margin-right: 1.5rem;
-    font-size: 26px;
-    text-align: right;
+    color: #696969;
+    font-size: 20px;
+    font-family: 'Poppins', sans-serif;
+    text-transform: uppercase;
+    letter-spacing: 2px;
 }
 
-.navbar a:hover {
-    color: black;
-}
-
-.navbar a.active {
-    background-color: #4CAF50;
-    color: white;
-}
-
-.navbar .icon {
-    text-align: right;
+.nav-icon {
     display: none;
 }
 
-#mobileitems {
-    display: none;
-    background-color: #333;
-    margin-right: .5rem;
-    text-align: center;
+.nav-icon:hover div{
+    background-color: rgb(49, 49, 49);
 }
 
-#mobileitems a {
-    color: #f2f2f2;
-    text-decoration: none;
-    margin-right: 1.5rem;
-    font-size: 26px;
-    text-align: right;
+.nav-icon div {
+    background-color: #696969;
+    width: 25px;
+    height: 3px;
+    margin: 5px;
 }
 
-.show {
-    display: block !important;
+@media (max-width: 1360px) {
+    .nav-list {
+        width: 40%;
+    }
 }
 
-@media screen and (max-width: 480px) {
-    .navbar a {display: none;}
-    .navbar a.icon {
-        float: right;
+@media (max-width: 925px) {
+    .nav-list {
+        width: 45%;
+    }
+}
+
+/* mobile */
+@media (max-width: 730px) {
+    .nav-list {
+        position: absolute;
+        right: 0;
+        top: 7vh;
+        display: flex;
+        flex-direction: column;
+        justify-content: center;
+        align-items: center;
+        height: 80vh;
+        width: 50%;
+        background: aquamarine;
+        justify-content: space-around;
+        transform: translateX(100%);
+        transition: transform 0.3s ease;
+    }
+
+    .activated {
+        transform: translateX(0);
+        transition: transform .5s ease-in;
+    }
+
+    .nav-icon {
         display: block;
     }
-    .navbar.toggled a.icon {
-        color: black;
+    .activated div {
+        background-color: black;
     }
+
+    .activated .line1 {
+        transform: rotate(-45deg) translate(-5px, 6px);
+        transition: transform 0.5s ease;
+    }
+    .activated .line2 {
+        opacity: 0;
+    }
+    .activated .line3 {
+        transform: rotate(45deg) translate(-5px, -6px);
+        transition: transform 0.3s ease;
+    }
+}
+
+#intro {
+    margin-top: 7vh;
+    background-color: #7fccb6;
+    text-align: center;
+    color: #363232;
+}
+
+#intro h1 {
+    margin: 3rem 0 0 0;
+    font-family: 'Poppins', sans-serif;
+}
+#intro h2{
+    font-family: 'Poppins', sans-serif;
+    font-size: 20px;
 }
