--- a/style.css
+++ b/style.css
@@ -160,3 +160,109 @@
         transform: translateY(0%);
     }
 }
+
+.main-title {
+    display: flex;
+    flex-direction: column;
+    justify-content: space-around;
+    align-items: center;
+    min-height: 7vh;
+}
+
+.main-title h1 {
+    font-family: 'Poppins', sans-serif;
+}
+
+#work {
+    background: #f5f2d0;
+}
+
+#work .main-title h1 {
+    color: rgb(127, 204, 182);
+    font-size: 55px;
+    font-family: 'Poppins', sans-serif;
+    text-transform: uppercase;
+    letter-spacing: 2px;
+    padding: 20px;
+}
+#work .line {
+    width: 10%;
+    height: 2px;
+    background-color: rgb(127, 204, 182);
+    margin-bottom: 4vh;
+}
+.products {
+    display: grid;
+    grid-template-columns: repeat(auto-fill, 250px);
+    grid-gap: 1rem;
+    justify-content: space-between;
+    margin: 2vh auto;
+    width: 95%;
+}
+.product {
+    width: fit-content;
+    height: fit-content;
+    border-radius: 10px;
+    text-align: center;
+    position: relative;
+}
+
+
+.product img {
+    width: 100%;
+    height: 100%;
+}
+
+.product .text-box {
+    opacity: 0;
+    background: #7fffd471;
+    text-align: center;
+    position: absolute;
+    text-align: center;
+    width: 100%;
+    height: 100%;
+    top: 0;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: space-between;
+}
+
+.product:hover .text-box {
+    animation: fade-in 1.2s;
+    animation-fill-mode: forwards;
+}
+
+
+
+@keyframes fade-in {
+    0% {
+        opacity: 0;
+    }
+    100% {
+        opacity: 1;
+    }
+}
+
+.product h1 {
+    font-family: 'Poppins', sans-serif;
+    text-transform: uppercase;
+    letter-spacing: 2px;
+    margin-top: 10px;
+    text-align: center;
+    align-self: flex-start;
+    width: 100%;
+}
+
+.product a {
+    background: #7fffd4;
+    border-radius: 10px;
+    padding: .5rem 20%;
+    margin-bottom: 20px;
+    font-family: 'Poppins', sans-serif;
+    text-transform: uppercase;
+    letter-spacing: 2px;
+    font-size: 25px;
+    text-decoration: none;
+    color: #525151;
+}
