--- a/style.css
+++ b/style.css
@@ -175,13 +175,14 @@
 }
 
 #work {
-    background: #f5f2d0;
+    background: aquamarine;
+    margin-bottom: 0 !important;
+    padding-bottom: 0 !important;
 }
 
 #work .main-title h1 {
-    color: rgb(127, 204, 182);
+    color: rgb(24, 24, 24);
     font-size: 55px;
-    font-family: 'Poppins', sans-serif;
     text-transform: uppercase;
     letter-spacing: 2px;
     padding: 20px;
@@ -189,7 +190,7 @@
 #work .line {
     width: 10%;
     height: 2px;
-    background-color: rgb(127, 204, 182);
+    background-color: rgb(24, 24, 24);
     margin-bottom: 4vh;
 }
 .products {
@@ -266,4 +267,10 @@
     font-size: 25px;
     text-decoration: none;
     color: #525151;
+}
+
+#footer {
+    background: #525151;
+    height: 10vh;
+    width: 100%;
 }
