--- a/style.css
+++ b/style.css
@@ -69,7 +69,7 @@
 
 /* mobile */
 @media (max-width: 730px) {
-    .nav-list {
+    #header .nav-list {
         position: absolute;
         right: 0;
         top: 7vh;
@@ -174,6 +174,10 @@
     font-family: 'Poppins', sans-serif;
 }
 
+body {
+    background: aquamarine;
+}
+
 #work {
     background: aquamarine;
     margin-bottom: 0 !important;
@@ -271,6 +275,53 @@
 
 #footer {
     background: #525151;
-    height: 10vh;
     width: 100%;
+    padding: 10px;
+    display: flex;
+    flex-direction: row;
+    align-items: center;
+    justify-content: space-around;
+}
+
+#footer .footer-icon {
+    border-radius: 50%;
+    background: aquamarine;
+    padding: 10px;
+    color: #525151;
+    font-size: 25px;
+    margin: 5px;
+}
+
+#footer-links .nav-list {
+    text-align: right;
+}
+
+#footer .nav-list li a {
+    color: aquamarine;
+    break-before: avoid;
+}
+
+/* mobile */
+@media (max-width: 730px) {
+    #footer {
+        flex-direction: column;
+        text-align: center;
+    }
+
+    #footer .nav-list {
+        flex-direction: column;
+        text-align: center;
+    }
+
+    #footer.nav-list li {
+        text-align: center;
+    }
+    
+    #footer .nav-list a {
+        margin: 3rem;
+    }
+
+    #footer .navlist a:last-child(){
+        font-size: 15px;
+    }
 }
